--- a/wish.css
+++ b/wish.css
@@ -36,7 +36,7 @@
     width: 680px; /* 设置每个图片项的宽度 */
     height: 453.36px; /* 设置每个图片项的高度 */
     margin-right: 0px; /* 设置右侧外边距，调整图片之间的间距 */
-    background-color: #f0f0f0; /* 添加背景颜色，便于查看位置 */
+    background-color: #75f3ff; /* 添加背景颜色，便于查看位置 */
     z-index: 5;
 }
 
@@ -45,6 +45,12 @@
     z-index: 5;
 }
   
+.custom-video {
+    width: 100%; /* 设置视频宽度为容器宽度的百分比 */
+    height: 453.36px; /* 设置视频高度为容器高度的百分比 */
+    object-fit: contain; /* 控制视频的尺寸以保持原始长宽比 */
+  }
+
   @font-face {
       font-family:'Univers LT Std-XBlackObl';
       src:url('font/UniversLTStd-XBlackObl.otf')
@@ -738,7 +744,7 @@
       height: 100px;
       position: absolute;
       transform: translate(-100px,1597px);
-      background: rgb(117, 243, 255);
+      background: rgb(198, 198, 198);
       overflow: hidden;
       z-index: 1;
   }
