--- a/me.css
+++ b/me.css
@@ -35,7 +35,7 @@
     width: 680px; /* 设置每个图片项的宽度 */
     height: 453.36px; /* 设置每个图片项的高度 */
     margin-right: 0px; /* 设置右侧外边距，调整图片之间的间距 */
-    background-color: #f0f0f0; /* 添加背景颜色，便于查看位置 */
+    background-color: #fb00ff; /* 添加背景颜色，便于查看位置 */
     z-index: 5;
 }
 
@@ -43,6 +43,12 @@
     margin-right: 0; /* 最后一个图片项去除右侧外边距 */
     z-index: 5;
 }
+
+.custom-video {
+    width: 100%; /* 设置视频宽度为容器宽度的百分比 */
+    height: 453.36px; /* 设置视频高度为容器高度的百分比 */
+    object-fit: contain; /* 控制视频的尺寸以保持原始长宽比 */
+  }
 
   @font-face {
       font-family:'Univers LT Std-XBlackObl';
